@@ -15,7 +15,8 @@ Zend Framework                                                             NEWS
 - Fixed bug in Zend_Controller_Dispatcher::_formatName. Reported by Arpad Ray.
   (Chris)
 - Zend::dump() now works from CLI (Rob Allen)
-  
+- Improved support for XML-RPC namespaces (Mike, Chuck)  
+
 =RELEASE 0.1.2 / 8-Mar-2006=
 - Unit test suite is now included. (Mike)
 - Docs for Zend_Controller are now included. (Mike)
